tests/compile_fail/settings_on_tuple_struct.rs
use conflaguration::Settings;

#[derive(Settings)]
struct BadConfig(u16);

fn main() {}
